Fix Todo form showing incorretly on firefox

--- a/style.css
+++ b/style.css
@@ -104,10 +104,11 @@ i {
 .top-bar .search-bar-container #search-bar-submit-btn {
   margin: 0 0.5rem;
   font-size: 1rem;
+  color: var(--tertiary-color);
 }
 
 .top-bar .search-bar-container #search-bar-submit-btn:hover {
-  color: blue;
+  color: var(--main-color);
 }
 
 .content {
@@ -209,6 +210,7 @@ i {
 }
 
 .add-list-input-container .add-list-input {
+  width: inherit;
   font-size: 1.3rem;
   padding: 0.3rem 0;
   border: none;
@@ -532,6 +534,11 @@ i {
 }
 
 /* MEDIA QUERIES */
+@media (max-height: 768px) {
+  .todo-form textarea {
+    height: 10rem;
+  }
+}
 
 @media (min-width: 481px) and (max-width: 1024px) {
   .top-bar {
